--- a/sources/css/import/_system/design.styl
+++ b/sources/css/import/_system/design.styl
@@ -24,20 +24,28 @@ for vx in left center right
 
 value = 0px 5px 10px 15px 20px 25px 30px
 value_sm = 5px 10px 15px 20px 25px 30px 35px
+sizes = scr_xs scr_sm scr_md scr_lg
 
 for vx in margin padding
 	.no-{vx}
 		{vx} 0 !important
+	for vq, key in xs sm md lg
+		@media (min-width: sizes[key])
+			.no-{vx}-{vq}
+				{vx} 0 !important
 	for vy in top left bottom right
 		.no-{vx}-{vy}
 			{vx}-{vy} 0 !important
+		for vq, key in xs sm md lg
+			@media (min-width: sizes[key])
+				.no-{vx}-{vy}-{vq}
+					{vx}-{vy} 0 !important
 		for vz, key in xxs xs s m l xl xxl
 			/.{vz}-{vx}-{vy}
 				{vx}-{vy}: value[key] !important
 				@media (min-width: scr_sm)
 					{vx}-{vy}: value_sm[key] !important
 
-sizes = scr_xs scr_sm scr_md scr_lg
 for vx in center right left
 	for vz, key in xs sm md lg
 		.{vz}-{vx}
