--- a/public_html/layout/css/frontend.css
+++ b/public_html/layout/css/frontend.css
@@ -4061,9 +4061,65 @@ input:focus
 {
     margin: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-margin-xs
+    {
+        margin: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-margin-sm
+    {
+        margin: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-margin-md
+    {
+        margin: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-margin-lg
+    {
+        margin: 0 !important;
+    }
+}
 .no-margin-top
 {
     margin-top: 0 !important;
+}
+@media (min-width: 480px)
+{
+    .no-margin-top-xs
+    {
+        margin-top: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-margin-top-sm
+    {
+        margin-top: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-margin-top-md
+    {
+        margin-top: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-margin-top-lg
+    {
+        margin-top: 0 !important;
+    }
 }
 .xxs-margin-top
 {
@@ -4146,6 +4202,34 @@ input:focus
 {
     margin-left: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-margin-left-xs
+    {
+        margin-left: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-margin-left-sm
+    {
+        margin-left: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-margin-left-md
+    {
+        margin-left: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-margin-left-lg
+    {
+        margin-left: 0 !important;
+    }
+}
 .xxs-margin-left
 {
     margin-left: 0 !important;
@@ -4226,6 +4310,34 @@ input:focus
 .no-margin-bottom
 {
     margin-bottom: 0 !important;
+}
+@media (min-width: 480px)
+{
+    .no-margin-bottom-xs
+    {
+        margin-bottom: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-margin-bottom-sm
+    {
+        margin-bottom: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-margin-bottom-md
+    {
+        margin-bottom: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-margin-bottom-lg
+    {
+        margin-bottom: 0 !important;
+    }
 }
 .xxs-margin-bottom
 {
@@ -4308,6 +4420,34 @@ input:focus
 {
     margin-right: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-margin-right-xs
+    {
+        margin-right: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-margin-right-sm
+    {
+        margin-right: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-margin-right-md
+    {
+        margin-right: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-margin-right-lg
+    {
+        margin-right: 0 !important;
+    }
+}
 .xxs-margin-right
 {
     margin-right: 0 !important;
@@ -4389,9 +4529,65 @@ input:focus
 {
     padding: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-padding-xs
+    {
+        padding: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-padding-sm
+    {
+        padding: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-padding-md
+    {
+        padding: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-padding-lg
+    {
+        padding: 0 !important;
+    }
+}
 .no-padding-top
 {
     padding-top: 0 !important;
+}
+@media (min-width: 480px)
+{
+    .no-padding-top-xs
+    {
+        padding-top: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-padding-top-sm
+    {
+        padding-top: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-padding-top-md
+    {
+        padding-top: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-padding-top-lg
+    {
+        padding-top: 0 !important;
+    }
 }
 .xxs-padding-top
 {
@@ -4474,6 +4670,34 @@ input:focus
 {
     padding-left: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-padding-left-xs
+    {
+        padding-left: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-padding-left-sm
+    {
+        padding-left: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-padding-left-md
+    {
+        padding-left: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-padding-left-lg
+    {
+        padding-left: 0 !important;
+    }
+}
 .xxs-padding-left
 {
     padding-left: 0 !important;
@@ -4555,6 +4779,34 @@ input:focus
 {
     padding-bottom: 0 !important;
 }
+@media (min-width: 480px)
+{
+    .no-padding-bottom-xs
+    {
+        padding-bottom: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-padding-bottom-sm
+    {
+        padding-bottom: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-padding-bottom-md
+    {
+        padding-bottom: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-padding-bottom-lg
+    {
+        padding-bottom: 0 !important;
+    }
+}
 .xxs-padding-bottom
 {
     padding-bottom: 0 !important;
@@ -4635,6 +4887,34 @@ input:focus
 .no-padding-right
 {
     padding-right: 0 !important;
+}
+@media (min-width: 480px)
+{
+    .no-padding-right-xs
+    {
+        padding-right: 0 !important;
+    }
+}
+@media (min-width: 768px)
+{
+    .no-padding-right-sm
+    {
+        padding-right: 0 !important;
+    }
+}
+@media (min-width: 992px)
+{
+    .no-padding-right-md
+    {
+        padding-right: 0 !important;
+    }
+}
+@media (min-width: 1200px)
+{
+    .no-padding-right-lg
+    {
+        padding-right: 0 !important;
+    }
 }
 .xxs-padding-right
 {
@@ -7015,7 +7295,7 @@ article.index-page .news__more
 }
 .toolbar
 {
-    line-height: 58px;
+    line-height: 63px;
 
     position: relative;
     position: fixed;
@@ -7026,7 +7306,7 @@ article.index-page .news__more
     float: left;
 
     width: 100%;
-    height: 120px;
+    height: 61px;
     margin-bottom: 20px;
 
     white-space: nowrap;
@@ -7035,6 +7315,15 @@ article.index-page .news__more
 /* Выбор сайтов холдинга */
 /* Тригер мобильного меню */
 /* Тригеры попапов */
+}
+@media (min-width: 992px)
+{
+    .toolbar
+    {
+        line-height: 58px;
+
+        height: 120px;
+    }
 }
 @media (min-width: 768px)
 {
@@ -7190,7 +7479,14 @@ article.index-page .news__more
 }
 .toolbar .site-select__trigger span
 {
-    display: none;
+    display: inline;
+}
+@media (min-width: 992px)
+{
+    .toolbar .site-select__trigger span
+    {
+        display: none;
+    }
 }
 @media (min-width: 1200px)
 {
@@ -7322,6 +7618,23 @@ article.index-page .news__more
     text-transform: uppercase;
 
     color: #f4f4f4;
+}
+.toolbar .feedback:hover,
+.toolbar .filials:hover
+{
+    color: #084ed0;
+}
+.toolbar .filials svg
+{
+    position: relative;
+    top: -1px;
+
+    display: inline-block;
+
+    margin-right: 9px;
+    margin-left: -9px;
+
+    vertical-align: middle;
 }
 .toolbar .feedback
 {
