--- a/sources/html/includes/toolbar.jade
+++ b/sources/html/includes/toolbar.jade
@@ -1,6 +1,6 @@
 header.toolbar
 	.container
-		.row.no-gutter
+		.row.no-gutter-md
 			.col-xs-3.visible-md.visible-lg
 				a(href="/").logo
 					include ../../../public_html/layout/images/svg/logo.svg
