--- a/sources/html/tech.jade
+++ b/sources/html/tech.jade
@@ -7,19 +7,11 @@ include includes/header
 	main.page
 		.container
 			.row
-				.col-sm-3.col-md-4
+				.col-sm-12
 					aside.sidebar
 						a(href="/").logo
 							include ../../public_html/layout/images/svg/logo.svg
-						nav.nav-left.no-mobile
-							a(href="about.html").nav-left__item О компании
-							a(href="news.html").nav-left__item Новости
-							a(href="services.html").nav-left__item Услуги
-							a(href="tech.html").nav-left__item.nav-left__item--active Технологии
-							a(href="projects.html").nav-left__item Наши проекты
-							a(href="partners.html").nav-left__item Партнеры
-							a(href="contacts.html").nav-left__item Контакты
-				.col-sm-9.col-md-8
+				.col-sm-12.col-md-8.col-md-offset-2
 					article
 						h1.page__title Технологии
 						.page__divider
