--- a/sources/css/import/sidebar.styl
+++ b/sources/css/import/sidebar.styl
@@ -2,18 +2,38 @@
 	full-width()
 	z-index 10
 	position relative
-	padding-bottom 30px
-	@media (min-width: scr_sm)
-		padding-bottom 80px
-.sidebar, article.index-page	
+	
+	@media (min-width: scr_md)
+		.index &
+			padding-bottom 80px
+	.logo
+		full-width()
+		@media (min-width: scr_md)
+			display none
+		svg
+			max-width 188px
+	.bages
+		display none
+		margin-bottom 95px
+		margin-top 90px
+		&__item
+			max-width 200px
+			margin-bottom 13px
+			line-height 54px
+		&__title
+			top 4px
+			position relative
+		&__image
+			max-width 54px
+		@media (min-width: scr_md)
+			display block
+.sidebar, .index-news
 	.news
 		full-width()
 		text-align: center
 		background #1b1b1b
-		width 110%
 		padding 12px 0 5px
-		margin-left -5%
-		@media (min-width: scr_sm)
+		@media (min-width: scr_md)
 			padding 0
 			width 100%
 			margin-left 0
@@ -23,21 +43,32 @@
 		&__item
 			full-width()
 			position relative !important
-
+			text-align center
+			padding-bottom 0
+			@media (min-width: scr_md)
+				text-align left
 		&__date
 			color blue2
 			font-size 10px
 			font-weight bold
 			margin-bottom 2px
+			margin-top 6px
 		&__title
 			color white
-			text-decoration underline
+			float none
 			font-size 13px
 			line-height 16px
-			float left
 			margin-bottom 0
+			text-decoration underline
+			max-width 70%
+			display inline-block
 			@media (min-width: scr_sm)
+				font-size 15px
+			@media (min-width: scr_md)
+				font-size 13px
+				float left
 				margin-bottom 25px
+				max-width none
 			&:hover
 				color blue2
 		&__more
@@ -47,10 +78,20 @@
 			font-weight bold
 			&:hover
 				text-decoration underline
-article.index-page
+
+.sidebar
+	.news
+		display none
+		@media (min-width: scr_md)
+			display block
+.index-news
+	full-width()
 	.news
 		height auto !important
-		
+		display block
+		margin-top 30px
+		@media (min-width: scr_md)
+			display none
 		&__more
 			full-width()
-			margin 10px 0
+			margin 15px 0 10px
