--- a/sources/css/import/toolbar.styl
+++ b/sources/css/import/toolbar.styl
@@ -84,7 +84,7 @@
 		line-height 58px
 	z-index 20
 	white-space nowrap
-	background rgba(0,0,0,.5)
+	background rgba(0,0,0,.8)
 	margin-bottom 20px
 	top 0
 	left 0
@@ -101,7 +101,8 @@
 		line-height 50px
 	.logo
 		full-width()
-		margin-left 20px
+		@media (min-width: scr_sm)
+			margin-left 20px
 		line-height 120px
 		svg
 			middle()
@@ -142,7 +143,9 @@
 	/* Выбор сайтов холдинга */
 	.site-select
 		middle()
-		width 200px
+		width 100%
+		@media (min-width: scr_md)
+			width 200px
 		font-weight bold
 		font-size 10px
 		text-transform uppercase
@@ -161,7 +164,9 @@
 			svg
 				margin-left 5px
 			span
-				display inline
+				display none
+				@media (min-width: scr_xs)
+					display inline
 				@media (min-width: scr_md)
 					display none
 				@media (min-width: scr_lg)
@@ -184,12 +189,21 @@
 			&:hover
 				color blue2
 				text-decoration none
+	.search-trigger
+		display none
+		@media (min-width: scr_sm)
+			display inline
+		svg
+			middle()
+			top -2px
+			position relative
 	/* Тригер мобильного меню */
 	.nav-trigger
 		float right
 		position relative
-		z-index 22
-		@media (min-width: scr_sm)
+		z-index 220
+		margin-left 40px
+		@media (min-width: scr_md)
 			display none
 		span
 			color white
@@ -206,7 +220,9 @@
 		display inline
 		margin 0 7px
 		&:first-of-type
-			margin-left 20px
+			margin-left 40px
+			@media (min-width: scr_xs)
+				margin-left 10px
 		svg
 			middle()
 			position relative
