--- a/sources/css/style.css
+++ b/sources/css/style.css
@@ -787,6 +787,30 @@ input:focus {
   padding-right: 0;
   padding-left: 0;
 }
+@media (min-width: 480px) {
+  .no-gutter-xs > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+@media (min-width: 768px) {
+  .no-gutter-sm > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+@media (min-width: 992px) {
+  .no-gutter-md > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
+@media (min-width: 1200px) {
+  .no-gutter-lg > [class*='col-'] {
+    padding-right: 0;
+    padding-left: 0;
+  }
+}
 /*
  * Примеси
  */
@@ -998,6 +1022,8 @@ a:hover {
   max-width: 1150px;
 }
 .wrap {
+  float: left;
+  width: 100%;
   min-height: 100%;
   padding-bottom: 65px;
   margin-bottom: -65px;
@@ -1050,17 +1076,31 @@ a:hover {
   background-size: cover;
 }
 .index .wrap {
+  background-position: 45% top;
   -webkit-background-size: 350% auto;
   -moz-background-size: 350% auto;
   background-size: 350% auto;
-  background-position: 54% 40px;
 }
 @media (min-width: 480px) {
+  .index .wrap {
+    background-position: top center;
+    -webkit-background-size: 200% auto;
+    -moz-background-size: 200% auto;
+    background-size: 200% auto;
+  }
+}
+@media (min-width: 768px) {
+  .index .wrap {
+    -webkit-background-size: 140% auto;
+    -moz-background-size: 140% auto;
+    background-size: 140% auto;
+  }
+}
+@media (min-width: 992px) {
   .index .wrap {
     -webkit-background-size: cover;
     -moz-background-size: cover;
     background-size: cover;
-    background-position: center center;
   }
 }
 html {
@@ -1074,62 +1114,128 @@ article {
   float: left;
   width: 100%;
   float: right;
-  max-width: 715px;
-  margin-top: 220px;
+  margin-top: 180px;
   padding-top: 20px;
+}
+@media (min-width: 480px) {
+  .index-page {
+    margin-top: 230px;
+  }
+}
+@media (min-width: 992px) {
+  .index-page {
+    margin-top: 295px;
+    max-width: 509px;
+  }
 }
 @media (min-width: 768px) {
   .index-page {
-    margin-top: 495px;
+    max-width: none;
   }
-}
-.index-page h1 {
-  float: right;
-  padding-bottom: 15px;
-  margin-bottom: 20px;
-  text-transform: uppercase;
-  border-bottom: 1px solid rgba(255,255,255,0.5);
-  text-align: center;
-  font-size: 18px;
-}
-@media (min-width: 768px) {
-  .index-page h1 {
-    text-align: right;
-    font-size: 24px;
-  }
-}
-.index-page .bages {
-  text-align: center;
-  margin-bottom: 30px;
 }
 @media (min-width: 768px) {
   .index-page .bages {
+    left: 2%;
+  }
+}
+.index-page .highlight {
+  text-align: center;
+  float: left;
+  width: 100%;
+  margin-bottom: 35px;
+}
+@media (min-width: 992px) {
+  .index-page .highlight {
+    text-align: right;
+  }
+}
+.index-page .highlight h1 {
+  width: 100%;
+  float: right;
+  padding-bottom: 10px;
+  margin-bottom: 0px;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 20px;
+  line-height: 20px;
+}
+@media (min-width: 480px) {
+  .index-page .highlight h1 {
+    font-size: 25px;
+    line-height: 30px;
+  }
+}
+@media (min-width: 768px) {
+  .index-page .highlight h1 {
+    font-size: 35px;
+    line-height: 35px;
+  }
+}
+@media (min-width: 768px) {
+  .index-page .highlight h1 br {
+    display: none;
+  }
+}
+@media (min-width: 992px) {
+  .index-page .highlight h1 br {
+    display: inline;
+  }
+}
+.index-page .highlight p {
+  float: left;
+  width: 100%;
+  font-size: 14px;
+  line-height: 18px;
+}
+@media (min-width: 768px) {
+  .index-page .highlight p {
+    font-size: 20px;
+    line-height: 25px;
+  }
+}
+.page .bages {
+  text-align: center;
+  position: relative;
+}
+@media (min-width: 768px) {
+  .page .bages {
     margin-bottom: 0;
     text-align: left;
     line-height: 54px;
+    margin-bottom: 30px;
   }
 }
-.index-page .bages__image {
-  max-width: 44px;
+@media (min-width: 992px) {
+  .page .bages {
+    display: none;
+  }
+}
+.page .bages__image {
+  max-width: 54px;
   margin-bottom: 10px;
 }
 @media (min-width: 768px) {
-  .index-page .bages__image {
+  .page .bages__image {
     margin-bottom: 0;
     margin-right: 10px;
     max-width: 54px;
   }
 }
-.index-page .bages__title {
+.page .bages__title {
   display: inline-block;
   vertical-align: middle;
   text-transform: uppercase;
   font-weight: bold;
   max-width: 100%;
-  font-size: 7px;
+  font-size: 8px;
+}
+@media (min-width: 480px) {
+  .page .bages__title {
+    font-size: 11px;
+  }
 }
 @media (min-width: 768px) {
-  .index-page .bages__title {
+  .page .bages__title {
     max-width: 60%;
     line-height: 16px;
     font-size: 11px;
@@ -1252,15 +1358,6 @@ article {
 .modal-content .close svg path {
   fill: #0049d3;
 }
-@media (min-width: 768px) {
-  .modal-content .close {
-    right: -65px;
-    top: 0;
-  }
-  .modal-content .close svg {
-    max-width: 50px;
-  }
-}
 @media (min-width: 992px) {
   .modal-content .close {
     right: -100px;
@@ -1277,7 +1374,7 @@ article {
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=99)";
   filter: alpha(opacity=99);
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .modal-backdrop.in {
     opacity: 0.8;
     -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=80)";
@@ -1484,6 +1581,8 @@ article {
 .page {
   padding-bottom: 40px;
   color: #f4f4f4;
+  float: left;
+  width: 100%;
 }
 .page .xs-center {
   float: left;
@@ -2204,26 +2303,57 @@ article {
   width: 100%;
   z-index: 10;
   position: relative;
-  padding-bottom: 30px;
 }
-@media (min-width: 768px) {
-  .sidebar {
+@media (min-width: 992px) {
+  .index .sidebar {
     padding-bottom: 80px;
   }
 }
+.sidebar .logo {
+  float: left;
+  width: 100%;
+}
+@media (min-width: 992px) {
+  .sidebar .logo {
+    display: none;
+  }
+}
+.sidebar .logo svg {
+  max-width: 188px;
+}
+.sidebar .bages {
+  display: none;
+  margin-bottom: 95px;
+  margin-top: 90px;
+}
+.sidebar .bages__item {
+  max-width: 200px;
+  margin-bottom: 13px;
+  line-height: 54px;
+}
+.sidebar .bages__title {
+  top: 4px;
+  position: relative;
+}
+.sidebar .bages__image {
+  max-width: 54px;
+}
+@media (min-width: 992px) {
+  .sidebar .bages {
+    display: block;
+  }
+}
 .sidebar .news,
-article.index-page .news {
+.index-news .news {
   float: left;
   width: 100%;
   text-align: center;
   background: #1b1b1b;
-  width: 110%;
   padding: 12px 0 5px;
-  margin-left: -5%;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .sidebar .news,
-  article.index-page .news {
+  .index-news .news {
     padding: 0;
     width: 100%;
     margin-left: 0;
@@ -2233,55 +2363,94 @@ article.index-page .news {
   }
 }
 .sidebar .news__item,
-article.index-page .news__item {
+.index-news .news__item {
   float: left;
   width: 100%;
   position: relative !important;
+  text-align: center;
+  padding-bottom: 0;
+}
+@media (min-width: 992px) {
+  .sidebar .news__item,
+  .index-news .news__item {
+    text-align: left;
+  }
 }
 .sidebar .news__date,
-article.index-page .news__date {
+.index-news .news__date {
   color: #00aafa;
   font-size: 10px;
   font-weight: bold;
   margin-bottom: 2px;
+  margin-top: 6px;
 }
 .sidebar .news__title,
-article.index-page .news__title {
+.index-news .news__title {
   color: #f4f4f4;
-  text-decoration: underline;
+  float: none;
   font-size: 13px;
   line-height: 16px;
-  float: left;
   margin-bottom: 0;
+  text-decoration: underline;
+  max-width: 70%;
+  display: inline-block;
 }
 @media (min-width: 768px) {
   .sidebar .news__title,
-  article.index-page .news__title {
+  .index-news .news__title {
+    font-size: 15px;
+  }
+}
+@media (min-width: 992px) {
+  .sidebar .news__title,
+  .index-news .news__title {
+    font-size: 13px;
+    float: left;
     margin-bottom: 25px;
+    max-width: none;
   }
 }
 .sidebar .news__title:hover,
-article.index-page .news__title:hover {
+.index-news .news__title:hover {
   color: #00aafa;
 }
 .sidebar .news__more,
-article.index-page .news__more {
+.index-news .news__more {
   font-size: 10px;
   text-transform: uppercase;
   color: #00aafa;
   font-weight: bold;
 }
 .sidebar .news__more:hover,
-article.index-page .news__more:hover {
+.index-news .news__more:hover {
   text-decoration: underline;
 }
-article.index-page .news {
-  height: auto !important;
+.sidebar .news {
+  display: none;
 }
-article.index-page .news__more {
+@media (min-width: 992px) {
+  .sidebar .news {
+    display: block;
+  }
+}
+.index-news {
   float: left;
   width: 100%;
-  margin: 10px 0;
+}
+.index-news .news {
+  height: auto !important;
+  display: block;
+  margin-top: 30px;
+}
+@media (min-width: 992px) {
+  .index-news .news {
+    display: none;
+  }
+}
+.index-news .news__more {
+  float: left;
+  width: 100%;
+  margin: 15px 0 10px;
 }
 .search {
   position: relative;
@@ -2410,7 +2579,7 @@ article.index-page .news__more {
   line-height: 63px;
   z-index: 20;
   white-space: nowrap;
-  background: rgba(0,0,0,0.5);
+  background: rgba(0,0,0,0.8);
   margin-bottom: 20px;
   top: 0;
   left: 0;
@@ -2443,8 +2612,12 @@ article.index-page .news__more {
 .toolbar .logo {
   float: left;
   width: 100%;
-  margin-left: 20px;
   line-height: 120px;
+}
+@media (min-width: 768px) {
+  .toolbar .logo {
+    margin-left: 20px;
+  }
 }
 .toolbar .logo svg {
   display: inline-block;
@@ -2510,12 +2683,17 @@ article.index-page .news__more {
 .toolbar .site-select {
   display: inline-block;
   vertical-align: middle;
-  width: 200px;
+  width: 100%;
   font-weight: bold;
   font-size: 10px;
   text-transform: uppercase;
   position: relative;
   z-index: 200;
+}
+@media (min-width: 992px) {
+  .toolbar .site-select {
+    width: 200px;
+  }
 }
 .toolbar .site-select--open .site-select__trigger svg path {
   fill: #f4f4f4;
@@ -2530,7 +2708,12 @@ article.index-page .news__more {
   margin-left: 5px;
 }
 .toolbar .site-select__trigger span {
-  display: inline;
+  display: none;
+}
+@media (min-width: 480px) {
+  .toolbar .site-select__trigger span {
+    display: inline;
+  }
 }
 @media (min-width: 992px) {
   .toolbar .site-select__trigger span {
@@ -2564,12 +2747,27 @@ article.index-page .news__more {
   color: #00aafa;
   text-decoration: none;
 }
+.toolbar .search-trigger {
+  display: none;
+}
+@media (min-width: 768px) {
+  .toolbar .search-trigger {
+    display: inline;
+  }
+}
+.toolbar .search-trigger svg {
+  display: inline-block;
+  vertical-align: middle;
+  top: -2px;
+  position: relative;
+}
 .toolbar .nav-trigger {
   float: right;
   position: relative;
-  z-index: 22;
+  z-index: 220;
+  margin-left: 40px;
 }
-@media (min-width: 768px) {
+@media (min-width: 992px) {
   .toolbar .nav-trigger {
     display: none;
   }
@@ -2593,7 +2791,12 @@ article.index-page .news__more {
   margin: 0 7px;
 }
 .toolbar .popup-trigger:first-of-type {
-  margin-left: 20px;
+  margin-left: 40px;
+}
+@media (min-width: 480px) {
+  .toolbar .popup-trigger:first-of-type {
+    margin-left: 10px;
+  }
 }
 .toolbar .popup-trigger svg {
   display: inline-block;
